add Navbar widget

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,5 +1,9 @@
 .app.dark {
-    --bg-color: #6b6c67;
-    --primary-color: #c69963;
-    --secondary-color: #b17f42;
+    --bg-color: #2b2b2b;
+    --inverted-bg-color: #ebebeb;
+
+    --primary-color: #008080;
+    --secondary-color: #3cbfbf;
+    --inverted-primary-color: #bd7e2f;
+    --inverted-secondary-color: #ffb255;
 }
